New `provideApollo()` and `provideNamedApollo()`
Those two providers make it simpler to provide Apollo with options and
flags to the application.

Token injections, `APOLLO_OPTIONS`, `APOLLO_NAMED_OPTIONS` and
`APOLLO_FLAGS` are not needed anymore in application code. Though they
might still be used for custom providing techniques.

`ApolloModule` is deprecated because it brings no value. Especially with
the introduction of the two providing functions.

--- a/website/src/pages/docs/caching/configuration.mdx
+++ b/website/src/pages/docs/caching/configuration.mdx
@@ -22,23 +22,23 @@ additional libraries are required.
 
 ## Initialization
 
-Create an `InMemoryCache` object and provide it to the `APOLLO_OPTIONS` token, like so:
+Create an `InMemoryCache` object and provide to Apollo options, like so:
 
-```ts filename="graphql.provider.ts"
-import { HttpBatchLink } from 'apollo-angular/http';
+```ts filename="app.config.ts"
+import { provideApollo } from 'apollo-angular';
+import { HttpLink } from 'apollo-angular/http';
 import { inject } from '@angular/core';
-import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
-function apolloOptionsFactory(): ApolloClientOptions<any> {
-  const httpBatchLink = inject(HttpBatchLink);
+import { InMemoryCache } from '@apollo/client/core';
+
+provideApollo(() => {
+  const httpLink = inject(HttpLink);
+
   return {
-    link: httpBatchLink.create({ uri: '/graphql' }),
-    cache: new InMemoryCache({
-      /* your options here */
-    }), r options ...
+    link: httpLink.create({ uri: '/graphql' }),
+    cache: new InMemoryCache(),
+    // other options...
   };
-}
-  };
-}
+});
 ```
 
 The `InMemoryCache` constructor accepts a variety of
