--- a/website/src/pages/docs/recipes/nativescript.mdx
+++ b/website/src/pages/docs/recipes/nativescript.mdx
@@ -21,32 +21,28 @@ npm i apollo-angular
   **Note**: There are more packages to be installed, so check out the "initialization" article.
 </Callout>
 
-```ts filename="graphql.provider.ts"
-import { Apollo, APOLLO_OPTIONS } from 'apollo-angular';
+```ts filename="app.config.ts"
+import { provideApollo } from 'apollo-angular';
 import { HttpLink } from 'apollo-angular/http';
 import { NativeScriptHttpClientModule } from 'nativescript-angular/http-client';
 import { NativeScriptModule } from 'nativescript-angular/nativescript.module';
-import { importProvidersFrom, inject, Provider } from '@angular/core';
-import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
+import { ApplicationConfig, importProvidersFrom, inject } from '@angular/core';
+import { InMemoryCache } from '@apollo/client/core';
 
-function apolloOptionsFactory(): ApolloClientOptions<any> {
-  const httpLink = inject(HttpLink);
+export const appConfig: ApplicationConfig = {
+  providers: [
+    importProvidersFrom(NativeScriptModule, NativeScriptHttpClientModule), // this provides HttpClient
+    provideApollo(() => {
+      const httpLink = inject(HttpLink);
 
-  return {
-    link: httpLink.create({ uri: '/graphql' }),
-    cache: new InMemoryCache(),
-    // other options ...
-  };
-}
-
-export const graphqlProvider: Provider = [
-  Apollo,
-  importProvidersFrom(NativeScriptModule, NativeScriptHttpClientModule), // this provides HttpClient
-  {
-    provide: APOLLO_OPTIONS,
-    useFactory: apolloOptionsFactory,
-  },
-];
+      return {
+        link: httpLink.create({ uri: '/graphql' }),
+        cache: new InMemoryCache(),
+        // other options ...
+      };
+    }),
+  ],
+};
 ```
 
 If you are new to using Apollo with Angular, you should probably read the [Angular guide](/).
