--- a/website/src/pages/docs/development-and-testing/client-schema-mocking.mdx
+++ b/website/src/pages/docs/development-and-testing/client-schema-mocking.mdx
@@ -26,27 +26,35 @@ server schema. We'll start by constructing an instance of ApolloClient with a fe
 Pass in `typeDefs` with extensions to the schema and `resolvers` which actually provide the mock
 data:
 
-```ts filename="graphql.provider.ts"
+```ts filename="app.config.ts"
+import { provideApollo } from 'apollo-angular';
 import { HttpLink } from 'apollo-angular/http';
 import { inject } from '@angular/core';
-import { ApolloClientOptions, InMemoryCache } from '@apollo/client/core';
+import { InMemoryCache } from '@apollo/client/core';
+
 const typeDefs = gql`
   extend type Rocket {
     description: String!
   }
 `;
-const resolvers = { Rocket: { description: () => 'A boilerplate standard space rocket' } };
-function apolloOptionsFactory(): ApolloClientOptions<any> {
+
+const resolvers = {
+  Rocket: {
+    description: () => 'A boilerplate standard space rocket',
+  },
+};
+
+provideApollo(() => {
   const httpLink = inject(HttpLink);
+
   return {
     link: httpLink.create({ uri: '/graphql' }),
     cache: new InMemoryCache(),
     typeDefs,
-    resolvers, r options ...
+    resolvers,
+    // other options ...
   };
-}
-  };
-}
+});
 ```
 
 Documenting your client-side API in Schema Definition Language is incredibly valuable, as other
