Deep import to leverage ESM
See https://github.com/apollographql/apollo-client/pull/11570#issuecomment-1926627256

Fixes #2172

--- a/website/src/pages/docs/caching/advanced-topics.mdx
+++ b/website/src/pages/docs/caching/advanced-topics.mdx
@@ -314,7 +314,7 @@ a different query, Apollo Client doesn't know that. To tell Apollo Client where 
 existing `book` data, we can define a field policy `read` function for the `book` field:
 
 ```ts
-import { InMemoryCache } from '@apollo/client/core';
+import { InMemoryCache } from '@apollo/client/core/index.js';
 
 const cache = new InMemoryCache({
   typePolicies: {
@@ -383,7 +383,7 @@ write to the cache with a short configurable debounce interval.
 
 ```ts
 import { LocalStorageWrapper, persistCacheSync } from 'apollo3-cache-persist';
-import { InMemoryCache } from '@apollo/client/core';
+import { InMemoryCache } from '@apollo/client/core/index.js';
 
 const cache = new InMemoryCache();
 
