--- a/website/src/pages/docs/data/pagination.mdx
+++ b/website/src/pages/docs/data/pagination.mdx
@@ -34,7 +34,7 @@ field policy for every relevant list field.
 This example uses `offsetLimitPagination` to generate a field policy for `Query.posts`:
 
 ```typescript
-import { InMemoryCache } from '@apollo/client/core';
+import { InMemoryCache } from '@apollo/client/core/index.js';
 import { offsetLimitPagination } from '@apollo/client/utilities';
 
 const cache = new InMemoryCache({
@@ -197,7 +197,7 @@ class FeedComponent {
 ```
 
 ```ts
-import { InMemoryCache } from '@apollo/client/core';
+import { InMemoryCache } from '@apollo/client/core/index.js';
 
 const cache = new InMemoryCache({
   typePolicies: {
