--- a/website/src/pages/docs/data/subscriptions.mdx
+++ b/website/src/pages/docs/data/subscriptions.mdx
@@ -105,7 +105,7 @@ import { HttpLink } from 'apollo-angular/http';
 import { Kind, OperationTypeNode } from 'graphql';
 import { createClient } from 'graphql-ws';
 import { inject } from '@angular/core';
-import { InMemoryCache, split } from '@apollo/client/core';
+import { InMemoryCache, split } from '@apollo/client/core/index.js';
 import { GraphQLWsLink } from '@apollo/client/link/subscriptions';
 import { getMainDefinition } from '@apollo/client/utilities';
 
