--- a/website/src/pages/docs/recipes/nativescript.mdx
+++ b/website/src/pages/docs/recipes/nativescript.mdx
@@ -27,7 +27,7 @@ import { HttpLink } from 'apollo-angular/http';
 import { NativeScriptHttpClientModule } from 'nativescript-angular/http-client';
 import { NativeScriptModule } from 'nativescript-angular/nativescript.module';
 import { ApplicationConfig, importProvidersFrom, inject } from '@angular/core';
-import { InMemoryCache } from '@apollo/client/core';
+import { InMemoryCache } from '@apollo/client/core/index.js';
 
 export const appConfig: ApplicationConfig = {
   providers: [
