--- a/website/src/pages/docs/data/mutations.mdx
+++ b/website/src/pages/docs/data/mutations.mdx
@@ -258,7 +258,7 @@ can enable `useMutationLoading` flag in configuration.
 import { provideApollo } from 'apollo-angular';
 import { HttpLink } from 'apollo-angular/http';
 import { inject } from '@angular/core';
-import { InMemoryCache } from '@apollo/client/core';
+import { InMemoryCache } from '@apollo/client/core/index.js';
 
 provideApollo(
   () => {
