--- a/website/src/pages/docs/development-and-testing/client-schema-mocking.mdx
+++ b/website/src/pages/docs/development-and-testing/client-schema-mocking.mdx
@@ -30,7 +30,7 @@ data:
 import { provideApollo } from 'apollo-angular';
 import { HttpLink } from 'apollo-angular/http';
 import { inject } from '@angular/core';
-import { InMemoryCache } from '@apollo/client/core';
+import { InMemoryCache } from '@apollo/client/core/index.js';
 
 const typeDefs = gql`
   extend type Rocket {
