feat(SubscriptionOperation): only complete Queries and Mutations
BREAKING CHANGE: subscription observables must be manually completed by the `complete()` method.

--- a/website/src/pages/docs/development-and-testing/testing.mdx
+++ b/website/src/pages/docs/development-and-testing/testing.mdx
@@ -230,6 +230,7 @@ It's an object returned by `expectOne` and `match` methods.
   ApolloError instance
 - `networkError(error: Error): void{:ts}` - to flush an operation with a network error
 - `graphqlErrors(errors: GraphQLError[]): void{:ts}` - to flush an operation with graphql errors
+- `complete(): void{:ts}` - manually complete the connection, useful for subscription based testing
 
 ## Using Named Clients
 
